# DBus_SharingService

./: .gitignore  CMakeLists.txt  README.md
my_dlib/: CMakeLists.txt  lib.cpp  lib.h
my_lib/: CMakeLists.txt  SharingService.cpp  SharingService.h
src/: dbus_service.cpp  dbus_service.h  main.cpp  registeredServices.txt
test/: CMakeLists.txt  main.cpp
test_dlib/: CMakeLists.txt  main.cpp
test_dlib/debug/: CMakeCache.txt  Makefile  cmake_install.cmake
test_dlib/debug/.qt/: QtDeploySupport.cmake
test_dlib/debug/config.tests/static_link_order/: CMakeCache.txt  Makefile  cmake_install.cmake
test_for_com_system_service/: CMakeLists.txt  text_editor.cpp  text_editor.h
test_for_dlib/: CMakeLists.txt  main.cpp
testlib/: CMakeLists.txt  lib.h
testlib/src/: CMakeLists.txt  main.cpp
